--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "3d-react-carousal": "^5.0.0",
+    "daisyui": "^2.15.0",
     "firebase": "^9.8.1",
     "flowbite": "^1.4.7",
     "react": "^18.1.0",
