--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite": "^1.4.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
