--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
+    "react-loader-spinner": "^6.1.0",
     "react-query": "^3.39.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.3.0",
